# lerobot

./: .cproject  .project  .~lock.doc robo.odt#  CMakeLists.txt  LICENSE  README.md  a.out  doc robo.odt  inerface_spi.vhd  lance_moteur.c  lit_capteur.c  serveur.pl  yocto_trucs
projRb/: #GereMoteur.cpp#  .autotools  .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txtvvv  Calibrage.cpp  Calibrage.h  Commande.pm  ConfigureVolumes.cpp  ConfigureVolumes.h  GereCapteurDistance.cpp  GereCapteurDistance.h  GereGyroscope.cpp  GereGyroscope.h  GereLed.cpp  GereLed.h  GereMoteur.cpp  GereMoteur.h  GestionTraction.cpp  GestionTraction.h  LICENSE  LectureFichier.cpp  LectureFichier.h  LitMemoireLinux.cpp  LitMemoireLinux.h  Makefile  Messagerie.cpp  Messagerie.h  Messagerie_posix.cpprout  MonPWM.cpp  MonPWM.h  README.txt  SensMoteur.cpp  SensMoteur.h  Simulation.cpp  Simulation.h  Tache.cpp  (+43 more)
projRb/.csettings/: org.eclipse.cdt.core.default.config.1731584309_org.eclipse.cdt.core.settings  org.eclipse.linuxtools.cdt.autotools.core.configuration.build.2006782667_cdtBuildSystem  org.eclipse.linuxtools.cdt.autotools.core.configuration.build.2006782667_org.eclipse.cdt.core.settings  org.eclipse.linuxtools.cdt.autotools.core.configuration.build.debug.25465376_cdtBuildSystem  org.eclipse.linuxtools.cdt.autotools.core.configuration.build.debug.25465376_org.eclipse.cdt.core.settings
projRb/mesures/: enregistrement_a_verifier.txt
projRb/projet_codeblocs/: main.cpp  projet_codeblocs.cbp  projet_codeblocs.depend  projet_codeblocs.layout
projRb/sources/: Calibrage.cpp  GereCapteurDistance.cpp  GereGyroscope.cpp  GereGyroscope.h  GereLed.cpp  GereMoteur.h  GereMoteur_test.cpp  GestionTraction.cpp  GestionTraction.h  LectureFichier.cpp  LectureFichier.h  Messagerie.cpp  Messagerie.h  Messagerie_ipc.h  MonPWM.cpp  MonPWM.h  MonPWM_test.cpp  Tache.cpp  Tache.h  TransfertAXI.h  definitions_types.h  log.cpp  log.h  mode_fonctionnement.cpp  mode_fonctionnement.h  projRb.cpp  sockets.cpp  sockets.h  type.h  xparameters.h
projRb/telecomande/: Commande.pm  Messagerie.cpp  Messagerie.cpp~  Messagerie.h  Messagerie.h~  compile_telecomande.sh  lance_serveur.sh  log.h  serveur.pl  telecommande.cpp
test_queue/: lit  (+1 more)
(+1132 files in other folders)
